fixed side menu overflow globally

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,10 @@ body {
     overflow: hidden;
 }
 
+body {
+    position: relative;
+}
+
 main {
     height: 100%;
     scroll-behavior: smooth;
